twitter server reload is working.